Fixed uneven board padding

--- a/app/components/turnSet/turnSet.scss
+++ b/app/components/turnSet/turnSet.scss
@@ -1,8 +1,8 @@
 .active-border {
 	border: 2px solid #909590;
 	border-radius: 8px;
-	padding: 5px 10px 5px 5px;
-	margin-left: -7px;
+	/*padding: 5px 10px 5px 5px;*/
+	/*margin-left: -7px;*/
 }
 
 .inactive-border {
