--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -44,6 +44,10 @@ $colors: (
 	padding: 5px;
 }
 
+.thin-padding {
+  padding: 3px;
+}
+
 .padding-vertical {
 	padding: 10px 0;
 }
